<resources>
    <string name="app_name">Bulls and Cows</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity_new__game">New Game</string>
    <string name="main_activity_score">Score</string>
    <string name="main_activity_settings">Settings</string>
    <string name="inputNewName">Please enter a new name</string>
    <string name="Ok">Ok</string>
    <string name="name">Name Player</string>
    <string name="newName">Your Name</string>
    <string name="rulesGame">About game</string>
    <string name="exit">Back</string>
    <string name="rezult">Your Score</string>
    <string name="regulations">Компьютер задумывает четырехзначное число.
        Цифры в числе не повторяются, 0 не может стоять на первом месте.
        Игрок делает ходы, чтобы узнать это число.
         В ответ на каждый ход компьютер показывает число отгаданных цифр,
         стоящих на своих местах (число быков) и число отгаданных цифр,
        стоящих не на своих местах (число коров).</string>
</resources>
