<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/cowendbuls">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            style="@style/mainStyleButton"
            android:text="@string/main_activity_new__game"
            android:id="@+id/btNewGame"
            android:layout_gravity="center_horizontal"/>

        <Button
            style="@style/mainStyleButton"
            android:text="@string/main_activity_settings"
            android:id="@+id/btSettings"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="90dp"
            />

        <Button
            style="@style/mainStyleButton"
            android:text="@string/main_activity_score"
            android:id="@+id/btScore"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</RelativeLayout>
